--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-"watch:scss":"node-sass -w public/css/style.scss public/css/style2.css",
+    "watch:scss": "node-sass -w public/css/style.scss public/css/style2.css",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
   },
@@ -20,6 +20,7 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
+    "mongoose-paginate-v2": "^1.7.1",
     "node-sass": "^8.0.0",
     "nodemailer": "^6.9.1",
     "redis": "^4.6.5",
