--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^7.0.3",
     "mongoose-aggregate-paginate-v2": "^1.0.6",
     "mongoose-paginate-v2": "^1.7.1",
+    "monopay": "^1.2.2",
     "node-sass": "^8.0.0",
     "nodemailer": "^6.9.1",
     "redis": "^4.6.5",
