--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^5.0.0",
-    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
@@ -23,12 +22,10 @@
     "mongoose": "^7.0.3",
     "mongoose-aggregate-paginate-v2": "^1.0.6",
     "mongoose-paginate-v2": "^1.7.1",
-    "monopay": "^1.2.2",
-    "node-sass": "^8.0.0",
     "nodemailer": "^6.9.1",
-    "redis": "^4.6.5",
     "winston": "^3.8.2",
-    "winston-mongodb": "^5.1.1"
+    "winston-mongodb": "^5.1.1",
+    "zarinpal-checkout": "^0.2.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
